tests/rosetta/out/Smalltalk/active-directory-search-for-a-user.out
/workspace/mochi/tests/rosetta/out/Smalltalk/active-directory-search-for-a-user.st:5: parse error, expected '|' or identifier
