tests/rosetta/out/Smalltalk/active-directory-search-for-a-user.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:35Z
"
| client directory groups i main out search_user |
search_user := [:directory :username | directory at: username ].
main := [ | client := Dictionary from: {'Base' -> 'dc=example,dc=com'. 'Host' -> 'ldap.example.com'. 'Port' -> 389. 'GroupFilter' -> '(memberUid=%s)'}.
directory := Dictionary from: {'username' -> {'admins'. 'users'}. 'john' -> {'users'}}.
groups := search_user value: directory value: 'username'.
(((groups size) > 0)) ifTrue: [
  out := 'Groups: ['.
  i := 0.
  [(i < (groups size))] whileTrue: [
    out := (((out + '"') + groups at: i) + '"').
    ((i < ((groups size) - 1))) ifTrue: [
      out := (out + ', ').
    ] .
    i := (i + 1).
  ]
  .
  out := (out + ']').
  Transcript show: (out) printString; cr.
] ifFalse: [
  Transcript show: 'User not found'; cr.
]. ].
main value.
